# adr-timeline

./: .gitignore  Cargo.toml  README.md  index.html  style.css
.github/workflows/: deploy.yml
src/: app.rs  canvas.rs  main.rs  models.rs  utils.rs
src/components/: drug_form.rs  item_table.rs  lab_form.rs  mod.rs  patient_form.rs  reaction_form.rs  timeline.rs  toolbar.rs  tools_section.rs
src/components/modals/: bsa.rs  dress.rs  mod.rs  naranjo.rs  update.rs
