[package]
name = "adr-timeline"
version = "1.2.0"
edition = "2024"
description = "Drug Exposure & ADR Timeline — ระบบสร้างไทม์ไลน์การใช้ยา"

[[bin]]
name = "adr-timeline"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"
gloo-file = { version = "0.3", features = ["futures"] }
gloo-utils = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window", "Document", "HtmlElement", "HtmlCanvasElement",
  "CanvasRenderingContext2d", "HtmlInputElement", "HtmlTextAreaElement",
  "HtmlAnchorElement", "Blob", "BlobPropertyBag", "Url",
  "FileList", "File", "FileReader", "ProgressEvent",
  "Storage", "TextMetrics", "console",
  "Element", "EventTarget", "Location", "Navigator",
]

[profile.release]
opt-level = "z"
lto = true
